try to fix the images and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ h2 {
 h3 {
     opacity: 0;
     position: relative;
-    top: 175px;
+    top: 100px;
     margin: auto;
     font-family: 'Open Sans', 'Trebuchet MS', 'Arial';
     font-style: normal;
@@ -136,6 +136,8 @@ h3 {
 }
 
 .organization-container {
+    position: absolute;
+    top: 500px;
     width: auto;
     height: 500px;
     margin: 50px auto;
@@ -144,9 +146,10 @@ h3 {
 }
 
 .organization-container li{
+    position: absolute;
     width: 150px;
     height: 150px;
-    margin: auto;
+    margin: 55px;
     display: inline-block;
     background-color: red;
     cursor: pointer;
